--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 MONGO_URI = mongodb+srv://Server_data:adarsh@cluster0.dxmm2wf.mongodb.net/Invent-app?retryWrites=true&w=majority
 NODE_ENV = development
 JWT_SECRET = ADARSH2411
+
+
+EMAIL_HOST = smtp-mail.outlook.com
+EMAIL_USER = adarshgupta114@outlook.com
+EMAIL_PASS = 'ADARSHgupta@1'
