Forgoten Password Complete

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ JWT_SECRET = ADARSH2411
 EMAIL_HOST = smtp-mail.outlook.com
 EMAIL_USER = adarshgupta114@outlook.com
 EMAIL_PASS = 'ADARSHgupta@1'
+
+FRONTEND_URL = http://localhost:3000
